rust/macros/tests/invalid/target/debug/deps/leading_comma-b86900a7f3448c85.d
/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/leading_comma-b86900a7f3448c85.d: leading_comma.rs Cargo.toml

/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/libleading_comma-b86900a7f3448c85.rmeta: leading_comma.rs Cargo.toml

leading_comma.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
